fixed align

--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,7 @@ background-color: rgba(255, 255, 255, .8);
 border: 10px solid black;
 padding: 30px;
 margin: auto;
+align-self: center;
 }
 
 
